# vhop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
apps/: ceres_smpl.cpp  ceres_vposer.cpp  process_dataset.cpp
data/: evaluate.py  get_smpl_data.py  post_processing.py  preprocess_zju.py  visualize.py  visualize_mesh.py  visualize_sample.py  vposer_data.py  vposer_mean.npz
data/evaluation/: evaluate.py
data/test/: amass_body_input.txt  batch_norm.npz  leaky.weight.txt  leaky_relu.npz  linear.bias.txt  linear_layer.npz  sample.npz  smpl_forward.npz  smpl_lbs.npz  vposer_data.npz  vposer_weights.npz
data/test/pipeline/: sample_21.npz
data/test/samples/: sample_31.npz  sample_33.npz
data/test/utility/: reading.npz
data/test/vposer/: leaky_relu.npz  linear_layer.npz  vposer_data.npz
data/vposer/: decoder_net.5.weight.txt  encoder_net.4.var.txt  encoder_net.4.weight.txt  encoder_net.6.bias.txt  encoder_net.8.mu.bias.txt
data/vposer/weights/: encoder_net.1.bias.txt  encoder_net.1.mean.txt  encoder_net.2.bias.txt  encoder_net.4.mean.txt  encoder_net.8.logvar.weight.txt
data/zju-mocap/: preprocess_zju.py
include/vhop/: constants.h  pipeline.h  reprojection_error.h  smpl_model.h  utility.h  visualization.h  visualizer.h
include/vhop/ceres/: base_residual.h  base_rpe_residual.h  constant_motion.h  rpe_smpl.h  rpe_vposer.h  zero_motion.h
include/vhop/implementation/: pipeline_impl.hpp  smpl_impl.hpp  smpl_model.hpp  utility_impl.hpp
include/vhop/residuals/: rp_smpl.h  rp_vposer.h
include/vposer/: BaseLayer.h  BatchNorm.h  FileUtils.h  LatentDist.h  LeakyRelu.h  Linear.h  VPoser.h  constants.h
src/: BatchNorm.cpp  LatentDist.cpp  Linear.cpp  VPoser.cpp  data_visualization.cpp  pipeline.cpp  smpl_model.cpp  utility.cpp  visualization.cpp
src/vposer/: BatchNorm.cpp  FileUtils.cpp  LatentDist.cpp  LeakyRelu.cpp  Linear.cpp  VPoser.cpp
tests/: test_main.cpp  test_pipeline.h  test_reprojection_error.h  test_smpl_model.cpp  test_smpl_model.h  test_utility.cpp  test_utility.h  test_vposer.cpp  test_vposer.h
vposer/: CMakeLists.txt  main.cpp
vposer/data/decoder_testing/: pose_body_matrot_res.txt  pose_body_res.txt  sampled.txt
vposer/data/test_weights/: leaky.bias.txt  linear.weight.txt
vposer/data/weights/: decoder_net.0.bias.txt  decoder_net.0.weight.txt  decoder_net.3.bias.txt  decoder_net.5.bias.txt  encoder_net.1.var.txt  encoder_net.1.weight.txt  encoder_net.2.weight.txt  encoder_net.4.bias.txt  encoder_net.7.bias.txt  encoder_net.8.logvar.bias.txt  encoder_net.8.mu.weight.txt
vposer/include/: BaseLayer.h  BatchNorm.h  FileUtils.h  LatentDist.h  LeakyRelu.h  Linear.h  Transformations.h  VPoser.h  VposerOutputs.h
vposer/src/: BatchNorm.cpp  FileUtils.cpp  LatentDist.cpp  LeakyRelu.cpp  Linear.cpp  Transformations.cpp  VPoser.cpp
